<resources>
    <string name="app_name">Exa_105_PocketCalculator</string>
    <string name="clear">CLEAR</string>
    <string name="num_1">1</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="divide">/</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="multiply">*</string>
    <string name="num_2">2</string>
    <string name="subtract">-</string>
    <string name="num_3">3</string>
    <string name="num_0">0</string>
    <string name="comma">,</string>
    <string name="plus_minus">+ / -</string>
    <string name="add">+</string>
    <string name="enter">ENTER</string>
</resources>
